fix: fixed height issue by adding min-height, fixed modal on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
   overflow: hidden auto;
 }
 
@@ -10,11 +12,8 @@
   top: 0;
   left: 0;
   width: 100vw;
-  min-height: max-content;
-  max-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden auto;
+  height: max-content;
+  overflow: hidden;
 }
 
 button:not(:disabled),
