--- a/src/components/profile-preview/profile-preview.scss
+++ b/src/components/profile-preview/profile-preview.scss
@@ -4,6 +4,7 @@
   min-width: 15rem;
   width: 90%;
   max-width: 40rem;
+  min-height: max-content;
   padding: 1rem;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.4);
