--- a/src/pages/profile/profile-page.scss
+++ b/src/pages/profile/profile-page.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   padding: 3rem 2rem;
+  min-height: max-content;
 
   @media screen and (max-width: 592px) {
     padding: 2rem 1rem;
